Bug 107067 - PIVOT CHARTS: data filter buttons shouldn't appear
Summary: PIVOT CHARTS: data filter buttons shouldn't appear
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks: Pivot-Chart
  Show dependency treegraph
 
Reported: 2017-04-10 13:42 UTC by bureautiquelibre
Modified: 2017-04-27 13:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example screenshot with buttons to remove (145.28 KB, image/png)
2017-04-10 13:42 UTC, bureautiquelibre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bureautiquelibre 2017-04-10 13:42:28 UTC
Created attachment 132448 [details]
Example screenshot with buttons to remove

See screenshot, part to remove is circled in red.

Couldn' find a use case where filtering directly on data would make sense.
Option also isn't available in the pivot table.
Comment 1 Xisco Faulí 2017-04-11 21:36:23 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: 7635e0c1c7f821a1081f8e3868f641ae74a172d6
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 Commit Notification 2017-04-20 14:12:40 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f44fb845f275e9be3861bb299f2bb3689280a92e

tdf#107067 remove data buttons as they don't have any action

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 bureautiquelibre 2017-04-27 13:12:46 UTC
Fix confirmed

Version: 5.4.0.0.alpha0+ (x64)
Build ID: e4f28aea21ce7e8f960cc2062f83715549be215e
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2017-04-25_02:04:15
Locale: fr-FR (fr_FR); Calc: CL

Thx :)
Comment 4 Xisco Faulí 2017-04-27 13:27:27 UTC
Setting to VERIFIED FIXED as per comment 3