tdf#107067 remove data buttons as they don't have any action

Change-Id: I91751cfc32a75ecd72dc711821d918b6a5d9f83f